js/js.translator/testData/incremental/invalidation/privateDeclarationLeakThroughDefaultParam/main/f.1.kt
private val prop = "1"

internal inline fun foo(lambda: () -> String = ::prop): String {
    return lambda()
}
